# started-project-android

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle  versions.gradle
.circleci/: config.yml
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/id/xxx/example/: ExampleAndroidTest.kt  ExampleInstrumentTest.kt
app/src/androidTest/java/id/xxx/xposed/: ExampleInstrumentedTest.kt
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/shared/: app.cpp
app/src/main/cpp/shared/example_jni_on_load/: methods.cpp  register.cpp
app/src/main/cpp/utils/: log.h
app/src/main/java/id/xxx/example/: App.kt  BrowseErrorActivity.kt  CardPresenter.kt  DetailsActivity.kt  DetailsDescriptionPresenter.kt  ErrorFragment.kt  MainActivity.kt  MainFragment.kt  Movie.kt  MovieList.kt  PlaybackActivity.kt  PlaybackVideoFragment.kt  VideoDetailsFragment.kt
app/src/main/java/id/xxx/started_project/: App.kt
app/src/main/java/id/xxx/xposed/: MainXposedHookLoadPackage.kt  MainXposedHookZygoteInit.kt
app/src/main/res/drawable/: activity_splash.xml  bg_splash.xml  ic_fan.xml  ic_splash_logo.xml  splash_icon.xml  splash_window_background.xml
app/src/main/res/layout/: activity_main.xml  activity_started.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_path.xml
app/src/test/java/id/xxx/example/: ExampleUnitTest.kt
app/src/test/java/id/xxx/xposed/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
key_store/: debug
started-android-library/: README.md  build.gradle
started-android-library/src/main/: AndroidManifest.xml
(+39 files in other folders)
